# surf

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  justfile  justfile.win  otel-collector-config.yaml
.devcontainer/: devcontainer.json
api/: .dockerignore  Dockerfile  alembic.ini  devui_server.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_retention_indexes.py
api/skills/hr/: SKILL.md
api/skills/it/: SKILL.md
api/skills/website/: SKILL.md
api/src/: main.py
api/src/agents/: _base.py  _discovery.py  _output.py  _proofread.py  _registry.py  shared_instructions.py
api/src/agents/coordinator/: prompts.py
api/src/agents/hr/: agent.py  prompts.py
api/src/agents/it/: agent.py  prompts.py
api/src/agents/website/: agent.py  prompts.py
api/src/config/: settings.py
api/src/middleware/: __init__.py  auth.py  body_limit.py  error_handler.py  input_validation.py  langfuse_utils.py  logging.py  rate_limit.py  telemetry.py
api/src/models/: __init__.py  agent.py  chat.py  conversation.py
api/src/orchestrator/: __init__.py  builder.py  history.py  middleware.py  pdf.py  stateless.py
api/src/rag/: __init__.py  quality_gate.py  search.py  tools.py
api/src/routes/: admin.py  agents.py  chat.py  guest.py  user.py
api/src/services/: chat_service.py  conversation.py  graph.py  response_pipeline.py  streaming.py
api/tests/: conftest.py
api/tests/eval/: conftest.py  dataset.json  judge.py  report.py  rubric.py  test_chat_eval.py
api/tests/evaluation/: conftest.py  test_hr_answers.py  test_routing.py
api/tests/integration/: conftest.py  test_conversation_db.py  test_conversation_flow.py  test_multi_turn.py
api/tests/load/: README.md  locustfile.py
api/tests/security/: test_conversation_isolation.py  test_input_injection.py  test_jwt_bypass.py
api/tests/unit/: test_admin.py  test_agents.py  test_api_contracts.py  test_auth_middleware.py  test_body_limit.py  test_config.py  test_conversation_service.py  test_coordinator_prompt.py  test_edge_cases.py  test_error_handling.py  test_graph_service.py  test_guest_auth.py  test_health.py  test_langfuse.py  test_langfuse_utils.py  test_middleware.py  test_models.py  test_output_sanitizer.py  test_pdf.py  test_proofread.py  test_quality_gate.py  test_rag_tool.py  test_rate_limiting.py  test_telemetry.py  test_user_routes.py
docs/: security-model.md  (+2 more)
infra/: main.json  (+5 more)
ingestion/: Dockerfile  pyproject.toml
ingestion/config/: sharepoint.example.env
ingestion/scripts/: backfill_content_source.py  diagnose_sharepoint.py  run_indexer.py  search_api.py  setup_sharepoint_indexer.py  test_e2e_sharepoint.py  test_rag_query.py  upload_to_sharepoint.py  validate_sharepoint_index.py  validate_website_index.py  verify_graph_access.py
ingestion/src/: __main__.py  health.py  main.py  models.py
ingestion/src/connectors/: __init__.py  csv_parser.py  docx.py  pdf.py  sharepoint_sync.py  txt.py  website_crawler.py
ingestion/src/pipeline/: chunking.py  embedding.py  indexing.py  metadata.py
ingestion/tests/: test_chunking.py  test_cli.py  test_embedding.py  test_indexing.py  test_manifest_pipeline.py  test_manifest_validation.py  test_pdf_connector.py  test_scripts.py  test_sharepoint_sync.py  test_website_crawler.py
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: main.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+97 files in other folders)
