[project]
name = "surf-api"
version = "0.1.0"
description = "Multi-Agent Orchestration Platform - API Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "azure-cosmos",
    "azure-identity",
    "azure-keyvault-secrets",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "agent-framework>=1.0.0rc2",
    "agent-framework-orchestrations",
    "agent-framework-devui",
    "azure-search-documents",
    "httpx",
    "PyJWT[crypto]>=2.8",
    "cryptography>=41.0",
]

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
    "locust",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
markers = [
    "evaluation: marks tests as evaluation tests (deselect with '-m \"not evaluation\"')",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
